# opengl-basics

./: CMakeLists.txt  README.md  main  main.cpp
include/glad/: glad.h
src/: glad.c
